tests/invalid/Lambda_Invalid_4.whiley
type voidretfunc is function(int)->(void)